--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.2.0
+  provider: ^6.0.0
+  flutter_charts: ^0.12.0
   fl_chart: ^0.63.0
+  intl: ^0.17.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
