--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,17 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  shared_preferences: ^2.2.0
-  provider: ^6.0.0
-  flutter_charts: ^0.12.0
-  fl_chart: ^0.63.0
-  intl: ^0.17.0
+  provider: ^6.0.0        # Pour la gestion de l'état
+  intl: ^0.20.2            # Pour la gestion des dates
+  fl_chart: ^0.70.0        # Pour les graphiques
+  hive: ^2.2.3             # Pour la persistance des données
+  hive_flutter: ^1.1.0     # Pour Hive avec Flutter
+  path_provider: ^2.0.11   # Pour accéder au système de fichiers
 dev_dependencies:
+  build_runner: ^2.4.6
   flutter_test:
     sdk: flutter
 
@@ -49,7 +46,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
